My template ftl

--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,7 @@ dependencies {
     compile 'com.sparkjava:spark-template-freemarker:2.5.5'
     compile 'org.freemarker:freemarker:2.3.26-incubating'
     compile "org.slf4j:slf4j-simple:1.7.21"
+
+    compileOnly 'org.projectlombok:lombok:1.18.10'
+    annotationProcessor 'org.projectlombok:lombok:1.18.10'
 }
